@@ -1,2 +1,2 @@
-#define VERSION "20170717"
+#define VERSION "20170720"
 #define BUG_ADDRESS "issue@texjp.org"
